Update .gitignore to ignore GoogleServices

--- a/.gitignore
+++ b/.gitignore
@@ -66,4 +66,9 @@ fastlane/Preview.html
 fastlane/screenshots
 fastlane/test_output
 
+# Mac
 .DS_Store
+
+# GoogleServices
+WoofRunner/GoogleService-Info.plist
+
