--- a/WoofRunner/GoogleService-Info.plist
+++ b/WoofRunner/GoogleService-Info.plist
@@ -11,7 +11,7 @@
 	<key>REVERSED_CLIENT_ID</key>
 	<string>com.googleusercontent.apps.405671047237-pdq2f5vdosp7imcaboabdpcbe0hqgff6</string>
 	<key>API_KEY</key>
-    <string>${FIREBASE_API_KEY}</string>
+	<string>AIzaSyDsIR90uSZlAZnX6h-GaXl8FSLlKnYjTlQ</string>
 	<key>GCM_SENDER_ID</key>
 	<string>405671047237</string>
 	<key>PLIST_VERSION</key>
