Integrate Google login button with logic and Firebase

--- a/WoofRunner/Info.plist
+++ b/WoofRunner/Info.plist
@@ -26,6 +26,14 @@
 				<string>fb1683107321716296</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.googleusercontent.apps.405671047237-pdq2f5vdosp7imcaboabdpcbe0hqgff6</string>
+			</array>
+		</dict>
 	</array>
 	<key>CFBundleVersion</key>
 	<string>1</string>
